--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <div class="layout layout-1">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">Colonne 1</div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
