--- a/index.html
+++ b/index.html
@@ -17,5 +17,42 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="layout layout-2">
+        <div class="container">
+          <div class="row">
+            <div class="col-7 col-sm-6 col-xl-6 offset-xl-1">Colonne 2</div>
+            <div class="col-7 col-sm-6 col-xl-3 offset-xl-1">Colonne 3</div>
+            <div class="col-7 col-sm-6 col-xl-3 offset-xl-1">Colonne 4</div>
+            <div class="col-7 col-sm-6 col-xl-6 offset-xl-1">Colonne 5</div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-12 col-xl-12">Colonne 6</div>
+            <div class="col-12 col-sm-12 col-xl-12">Colonne 7</div>
+          </div>
+          <div class="row">
+            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 8</div>
+          </div>
+          <div class="row">
+            <div class="col-10 col-sm-6 col-md-4 offset-md-2 offset-xl-1">Colonne 9</div>
+            <div class="col-10 col-sm-6 col-md-4 offset-xl-2">Colonne 10</div>
+          </div>
+          <div class="row">
+            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 11</div>
+          </div>
+          <div class="row">
+            <div class="col-10 col-sm-6 col-md-4 offset-md-2 offset-xl-1">Colonne 12</div>
+            <div class="col-10 col-sm-6 col-md-4 offset-xl-2">Colonne 13</div>
+          </div>
+          <div class="row">
+            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 14</div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-sm-12 col-xl-12">Colonne 15</div>
+            <div class="col-12 col-sm-12 col-xl-12">Colonne 16</div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
