suite codage footer html

--- a/index.html
+++ b/index.html
@@ -54,5 +54,18 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="layout layout-3">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-sm-12 col-xl-6">Colonne 17</div>
+            <div class="col-12 col-sm-12 col-xl-6">Colonne 18</div>
+            <div class="col-12 col-sm-12 col-xl-4">Colonne 19</div>
+            <div class="col-12 col-sm-12 col-xl-4">Colonne 20</div>
+            <div class="col-12 col-sm-12 col-xl-4">Colonne 21</div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
