corrections html / main + footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <div class="layout layout-1">
         <div class="container">
           <div class="row">
-            <div class="col-12">Colonne 1</div>
+            <div class="col-12">header</div>
+            <div class="col-12">header nav</div>
           </div>
         </div>
       </div>
@@ -21,35 +22,35 @@
       <div class="layout layout-2">
         <div class="container">
           <div class="row">
-            <div class="col-7 col-sm-6 col-xl-6 offset-xl-1">Colonne 2</div>
-            <div class="col-7 col-sm-6 col-xl-3 offset-xl-1">Colonne 3</div>
-            <div class="col-7 col-sm-6 col-xl-3 offset-xl-1">Colonne 4</div>
-            <div class="col-7 col-sm-6 col-xl-6 offset-xl-1">Colonne 5</div>
+            <div class="col-8 offset-1 col-xl-6 offset-xl-1">main texte 1</div>
+            <div class="col-8 offset-3 col-xl-3 offset-xl-1">main img 1</div>
+            <div class="col-8 offset-1 col-xl-3 offset-xl-1">main img 2</div>
+            <div class="col-8 offset-3 col-xl-6 offset-xl-1">main texte 2</div>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-12">Colonne 6</div>
-            <div class="col-12 col-sm-12 col-xl-12">Colonne 7</div>
+            <div class="col-12 col-xl-12">main animation</div>
+            <div class="col-12 col-xl-12">main animation</div>
           </div>
           <div class="row">
-            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 8</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main texte 3</div>
           </div>
           <div class="row">
-            <div class="col-10 col-sm-6 col-md-4 offset-md-2 offset-xl-1">Colonne 9</div>
-            <div class="col-10 col-sm-6 col-md-4 offset-xl-2">Colonne 10</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1">main img 3</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">main img 4</div>
           </div>
           <div class="row">
-            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 11</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main texte 4</div>
           </div>
           <div class="row">
-            <div class="col-10 col-sm-6 col-md-4 offset-md-2 offset-xl-1">Colonne 12</div>
-            <div class="col-10 col-sm-6 col-md-4 offset-xl-2">Colonne 13</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1">main img 5</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">main img 6</div>
           </div>
           <div class="row">
-            <div class="col-10 col-sm-3 col-md-4 offset-md-2 offset-xl-4">Colonne 14</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main boutton</div>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-12">Colonne 15</div>
-            <div class="col-12 col-sm-12 col-xl-12">Colonne 16</div>
+            <div class="col-12 col-sm-12 col-xl-12">main animation</div>
+            <div class="col-12 col-sm-12 col-xl-12">main animation</div>
           </div>
         </div>
       </div>
@@ -58,11 +59,11 @@
       <div class="layout layout-3">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-6">Colonne 17</div>
-            <div class="col-12 col-sm-12 col-xl-6">Colonne 18</div>
-            <div class="col-12 col-sm-12 col-xl-4">Colonne 19</div>
-            <div class="col-12 col-sm-12 col-xl-4">Colonne 20</div>
-            <div class="col-12 col-sm-12 col-xl-4">Colonne 21</div>
+            <div class="col-12 col-sm-12 col-xl-6">footer titre 1</div>
+            <div class="col-12 col-sm-12 col-xl-6">footer titre 2</div>
+            <div class="col-12 col-sm-12 col-xl-4">footer titre 3</div>
+            <div class="col-12 col-sm-12 col-xl-4">footer titre 4</div>
+            <div class="col-12 col-sm-12 col-xl-4">footer titre 5</div>
           </div>
         </div>
       </div>
