--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">header</div>
-            <div class="col-12">header nav</div>
+            <div class="col-10 offset-1 col-xl-10 offset-xl-1">header nav</div>
           </div>
         </div>
       </div>
