début de codage du contenue dans html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
       <div class="layout layout-1">
         <div class="container">
           <div class="row">
-            <div class="col-12">header</div>
-            <div class="col-10 offset-1 col-xl-10 offset-xl-1">header nav</div>
+            <div class="col-12">
+              <h1>
+                Charleston Club
+              </h1>
+            </div>
+            <div class="col-10 offset-1 col-xl-10 offset-xl-1">
+              <nav>
+                <a href="a-propos-de-nous">A props de nous</a>
+                <a href="dess-code">Dress code</a>
+                <a href="la-carte">La carte</a>
+                <a href="reservations">Reservations</a>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
@@ -22,35 +33,108 @@
       <div class="layout layout-2">
         <div class="container">
           <div class="row">
-            <div class="col-8 offset-1 col-xl-6 offset-xl-1">main texte 1</div>
-            <div class="col-8 offset-3 col-xl-3 offset-xl-1">main img 1</div>
-            <div class="col-8 offset-1 col-xl-3 offset-xl-1">main img 2</div>
-            <div class="col-8 offset-3 col-xl-6 offset-xl-1">main texte 2</div>
+            <div class="col-8 offset-1 col-xl-6 offset-xl-1">
+              <h2 id="a-propos-de-nous">
+                A propos de nous
+              </h2>
+              <p>
+                Le Charleston Club est bien plus qu'un simple jazz bar. Nous sommes une porte 
+                d'entrée vers l'âge d'or du jazz, une expérience immersive dans les Années Folles. 
+                Notre établissement allie élégance, musique en direct et cocktails artisanaux pour 
+                créer une atmosphère rétro inoubliable. Rejoignez-nous pour un voyage dans le temps 
+                et découvrez l'essence du jazz des années 20.
+              </p>
+            </div>
+            <div class="col-8 offset-3 col-xl-3 offset-xl-1">
+              <img src="img/bande-musical-jazz.jpg" alt="Photographie d'une bande musicale de jazz">
+            </div>
+            <div class="col-8 offset-1 col-xl-3 offset-xl-1">
+              <img src="img/femme-model.jpg" alt="Image d'une femme qui pose">
+            </div>
+            <div class="col-8 offset-3 col-xl-6 offset-xl-1">
+              <h2 id="dess-code">
+                Dress code
+              </h2>
+              <p>
+                Bienvenue au Charleston Club, le joyau caché de l'ère des Années Folles, où le 
+                glamour, l'élégance et l'effervescence de cette décennie inoubliable sont célébrés 
+                à chaque instant. Notre restaurant vous plonge dans une époque révolue, où la 
+                sophistication et le style étaient à l'honneur. Pour profiter pleinement de votre 
+                expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
+                des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
+              </p>
+
+            </div>
+          </div>
+          <div class="col-8 offset-3 col-xl-6 offset-xl-1">
+            <button>
+              +infos
+            </button>
           </div>
           <div class="row">
-            <div class="col-12 col-xl-12">main animation</div>
-            <div class="col-12 col-xl-12">main animation</div>
+            <div class="col-12 col-xl-12">
+              La Carte
+            </div>
+            <div class="col-12 col-xl-12">
+              La Carte
+            </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main texte 3</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+              <p>
+                Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
+                années 20, et nos boissons artisanales créent une expérience gastronomique unique 
+                qui se marie parfaitement avec l'ambiance rétro du Charleston Club.
+              </p>
+            </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1">main img 3</div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">main img 4</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1">
+              <img src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
+            </div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">
+              <img src="img/img-snack.jpg" alt="Image de snacks">
+            </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main texte 4</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+              <p>
+                Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
+                parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
+                notre liste de cocktails classiques revisités et de boissons artisanales, 
+                conçus pour satisfaire tous les palais. Que vous recherchiez des saveurs 
+                audacieuses ou des classiques intemporels, notre carte saura éveiller vos 
+                sens et vous plonger dans l'ambiance des Années Folles. Venez déguster l'âme 
+                du Charleston Club à chaque bouchée et à chaque gorgée.
+              </p>
+            </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1">main img 5</div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">main img 6</div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1">
+              <img src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
+            </div>
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">
+              <img src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
+            </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">main boutton</div>
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+              <button>
+                Réservations
+              </button>
+            </div>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-12">main animation</div>
-            <div class="col-12 col-sm-12 col-xl-12">main animation</div>
+            <div class="col-12 col-sm-12 col-xl-12">
+              <p>
+                Alors... ça reste entre nous?
+              </p>
+            </div>
+            <div class="col-12 col-sm-12 col-xl-12">
+              <p>
+                Alors... ça reste entre nous?
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -59,11 +143,21 @@
       <div class="layout layout-3">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-6">footer titre 1</div>
-            <div class="col-12 col-sm-12 col-xl-6">footer titre 2</div>
-            <div class="col-12 col-sm-12 col-xl-4">footer titre 3</div>
-            <div class="col-12 col-sm-12 col-xl-4">footer titre 4</div>
-            <div class="col-12 col-sm-12 col-xl-4">footer titre 5</div>
+            <div class="col-12 col-sm-12 col-xl-6">
+              <a href="e-mail">e-mail</a>
+            </div>
+            <div class="col-12 col-sm-12 col-xl-6">
+              <a href="telephone">Téléphone</a>
+            </div>
+            <div class="col-12 col-sm-12 col-xl-4">
+              <a href="twitter">Twitter</a>
+            </div>
+            <div class="col-12 col-sm-12 col-xl-4">
+              <a href="instagram">Instagram</a>
+            </div>
+            <div class="col-12 col-sm-12 col-xl-4">
+              <a href="facebook">Facebook</a>
+            </div>
           </div>
         </div>
       </div>
