suite codage html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Judson:ital@0;1&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -19,7 +22,7 @@
             </div>
             <div class="col-10 offset-1 col-xl-10 offset-xl-1">
               <nav>
-                <a href="a-propos-de-nous">A props de nous</a>
+                <a href="a-propos-de-nous">A propos de nous</a>
                 <a href="dess-code">Dress code</a>
                 <a href="la-carte">La carte</a>
                 <a href="reservations">Reservations</a>
