suite codage html

--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
                 expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
                 des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
               </p>
-
+              <div class="col-8 offset-3 col-xl-6 offset-xl-1">
+                <button class="button_more_info">
+                  +infos
+                </button>
+              </div>
             </div>
           </div>
-          <div class="col-8 offset-3 col-xl-6 offset-xl-1">
-            <button>
-              +infos
-            </button>
-          </div>
           <div class="row">
-            <div class="col-12 col-xl-12">
+            <div class="col-12 col-xl-12 animation-blur">
               La Carte
             </div>
             <div class="col-12 col-xl-12">
@@ -122,18 +121,18 @@
           </div>
           <div class="row">
             <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
-              <button>
+              <button class="button_reservations">
                 Réservations
               </button>
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-12">
+            <div class="col-12 col-sm-12 col-xl-12 animation-blur" style="transform: translate3d(19px, 0, 0, 0);">
               <p>
                 Alors... ça reste entre nous?
               </p>
             </div>
-            <div class="col-12 col-sm-12 col-xl-12">
+            <div class="col-12 col-sm-12 col-xl-12 animation-simple">
               <p>
                 Alors... ça reste entre nous?
               </p>
@@ -146,19 +145,19 @@
       <div class="layout layout-3">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-sm-12 col-xl-6">
+            <div class="col-12 col-sm-12 col-xl-6 footer-content">
               <a href="e-mail">e-mail</a>
             </div>
-            <div class="col-12 col-sm-12 col-xl-6">
+            <div class="col-12 col-sm-12 col-xl-6 footer-content">
               <a href="telephone">Téléphone</a>
             </div>
-            <div class="col-12 col-sm-12 col-xl-4">
+            <div class="col-12 col-sm-12 col-xl-4 footer-content">
               <a href="twitter">Twitter</a>
             </div>
-            <div class="col-12 col-sm-12 col-xl-4">
+            <div class="col-12 col-sm-12 col-xl-4 footer-content">
               <a href="instagram">Instagram</a>
             </div>
-            <div class="col-12 col-sm-12 col-xl-4">
+            <div class="col-12 col-sm-12 col-xl-4 footer-content">
               <a href="facebook">Facebook</a>
             </div>
           </div>
