Suite codage html

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 et découvrez l'essence du jazz des années 20.
               </p>
             </div>
-            <div class="col-8 offset-3 col-xl-3 offset-xl-1">
+            <div class="col-8 offset-3 col-xl-3 offset-xl-1 img-band">
               <img src="img/bande-musical-jazz.jpg" alt="Photographie d'une bande musicale de jazz">
             </div>
-            <div class="col-8 offset-1 col-xl-3 offset-xl-1">
+            <div class="col-8 offset-1 col-xl-3 offset-xl-1 img-woman-model">
               <img src="img/femme-model.jpg" alt="Image d'une femme qui pose">
             </div>
             <div class="col-8 offset-3 col-xl-6 offset-xl-1">
@@ -74,10 +74,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-12 col-xl-12 animation-blur">
+            <div class="col-12 col-xl-12 carousel-text-blur">
               La Carte
             </div>
-            <div class="col-12 col-xl-12">
+            <div class="col-12 col-xl-12 carousel-text">
               La Carte
             </div>
           </div>
@@ -91,10 +91,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1">
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1 img-section-la-carte">
               <img src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
             </div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
               <img src="img/img-snack.jpg" alt="Image de snacks">
             </div>
           </div>
@@ -112,10 +112,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1">
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1 img-section-la-carte">
               <img src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
             </div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2">
+            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
               <img src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
             </div>
           </div>
@@ -126,13 +126,13 @@
               </button>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12 col-sm-12 col-xl-12 animation-blur" style="transform: translate3d(19px, 0, 0, 0);">
+          <div class="row container-carousel-text">
+            <div class="col-12 col-sm-12 col-xl-12 carousel-text-blur" style="transform: translate3d(19px, 0, 0, 0);">
               <p>
                 Alors... ça reste entre nous?
               </p>
             </div>
-            <div class="col-12 col-sm-12 col-xl-12 animation-simple">
+            <div class="col-12 col-sm-12 col-xl-12 carousel-text">
               <p>
                 Alors... ça reste entre nous?
               </p>
