suite codage html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Judson:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inika&family=Judson:ital@0;1&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
                 Charleston Club
               </h1>
             </div>
-            <div class="col-10 offset-1 col-xl-10 offset-xl-1">
+            <div class="col-10 offset-1 col-xl-10 offset-xl-1 nav-container">
               <nav>
                 <a href="a-propos-de-nous">A propos de nous</a>
                 <a href="dess-code">Dress code</a>
@@ -66,7 +66,7 @@
                 expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
                 des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
               </p>
-              <div class="col-8 offset-3 col-xl-6 offset-xl-1">
+              <div class="col-8 offset-3 col-xl-6 offset-xl-1 container-button-more-info">
                 <button class="button_more_info">
                   +infos
                 </button>
@@ -75,14 +75,18 @@
           </div>
           <div class="row">
             <div class="col-12 col-xl-12 carousel-text-blur">
-              La Carte
+              <marquee>
+                La Carte La Carte La Carte La Carte La Carte La Carte La Carte 
+              </marquee>
             </div>
             <div class="col-12 col-xl-12 carousel-text">
-              La Carte
+              <marquee>
+                La Carte
+              </marquee>
             </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
               <p>
                 Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
                 années 20, et nos boissons artisanales créent une expérience gastronomique unique 
@@ -99,7 +103,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
               <p>
                 Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
                 parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
@@ -120,22 +124,22 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4">
+            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 container-button-reservation">
               <button class="button_reservations">
                 Réservations
               </button>
             </div>
           </div>
           <div class="row container-carousel-text">
-            <div class="col-12 col-sm-12 col-xl-12 carousel-text-blur" style="transform: translate3d(19px, 0, 0, 0);">
-              <p>
-                Alors... ça reste entre nous?
-              </p>
+            <div class="col-12 col-sm-12 col-xl-12 carousel-text-blur">
+              <marquee>
+                Alors... ça reste entre nous ?
+              </marquee>  
             </div>
             <div class="col-12 col-sm-12 col-xl-12 carousel-text">
-              <p>
-                Alors... ça reste entre nous?
-              </p>
+              <marquee>
+                Alors... ça reste entre nous ?
+              </marquee>
             </div>
           </div>
         </div>
