suite codage html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 expérience au Charleston Club, veuillez respecter notre dress code d'inspiration 
                 des années 1920, afin de vous fondre dans l'atmosphère envoûtante de cette époque exquise.
               </p>
-              <div class="col-8 offset-3 col-xl-6 offset-xl-1 container-button-more-info">
+              <div class="container-button-more-info">
                 <button class="button_more_info">
                   +infos
                 </button>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-12 col-xl-12 carousel-text">
               <marquee>
-                La Carte
+                La Carte La Carte La Carte La Carte La Carte La Carte La Carte 
               </marquee>
             </div>
           </div>
