suite codage html

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
             <div class="col-10 offset-1 col-xl-10 offset-xl-1 nav-container">
               <nav>
-                <a href="a-propos-de-nous">A propos de nous</a>
-                <a href="dess-code">Dress code</a>
-                <a href="la-carte">La carte</a>
-                <a href="reservations">Reservations</a>
+                <a href="#a-propos-de-nous">A propos de nous</a>
+                <a href="#dess-code">Dress code</a>
+                <a href="#la-carte">La carte</a>
+                <a href="#reservations">Reservations</a>
               </nav>
             </div>
           </div>
@@ -35,7 +35,7 @@
     <main>
       <div class="layout layout-2">
         <div class="container">
-          <div class="row">
+          <div class="row a-propos-de-nous-dress-code">
             <div class="col-8 offset-1 col-xl-6 offset-xl-1">
               <h2 id="a-propos-de-nous">
                 A propos de nous
@@ -75,7 +75,7 @@
           </div>
           <div class="row">
             <div class="col-12 col-xl-12 carousel-text-blur">
-              <marquee>
+              <marquee id="la-carte">
                 La Carte La Carte La Carte La Carte La Carte La Carte La Carte 
               </marquee>
             </div>
@@ -85,60 +85,62 @@
               </marquee>
             </div>
           </div>
-          <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
-              <p>
-                Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
-                années 20, et nos boissons artisanales créent une expérience gastronomique unique 
-                qui se marie parfaitement avec l'ambiance rétro du Charleston Club.
-              </p>
+          <div class="container-la-carte">
+            <div class="row">
+              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
+                <p>
+                  Découvrez une symphonie de saveurs et de cocktails exquis. Notre menu, inspiré des 
+                  années 20, et nos boissons artisanales créent une expérience gastronomique unique 
+                  qui se marie parfaitement avec l'ambiance rétro du Charleston Club.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1 img-section-la-carte">
-              <img src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
+            <div class="row">
+              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-1 img-section-la-carte">
+                <img src="img/img-cocktails-restaurant.jpg" alt="Image avec des cocktails">
+              </div>
+              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
+                <img src="img/img-snack.jpg" alt="Image de snacks">
+              </div>
             </div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
-              <img src="img/img-snack.jpg" alt="Image de snacks">
+            <div class="row">
+              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
+                <p>
+                  Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
+                  parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
+                  notre liste de cocktails classiques revisités et de boissons artisanales, 
+                  conçus pour satisfaire tous les palais. Que vous recherchiez des saveurs 
+                  audacieuses ou des classiques intemporels, notre carte saura éveiller vos 
+                  sens et vous plonger dans l'ambiance des Années Folles. Venez déguster l'âme 
+                  du Charleston Club à chaque bouchée et à chaque gorgée.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 text-la-carte">
-              <p>
-                Commencez votre soirée en douceur avec notre sélection de snacks délicieux, 
-                parfaits pour accompagner les premières notes de musique. Ensuite, plongez dans 
-                notre liste de cocktails classiques revisités et de boissons artisanales, 
-                conçus pour satisfaire tous les palais. Que vous recherchiez des saveurs 
-                audacieuses ou des classiques intemporels, notre carte saura éveiller vos 
-                sens et vous plonger dans l'ambiance des Années Folles. Venez déguster l'âme 
-                du Charleston Club à chaque bouchée et à chaque gorgée.
-              </p>
+            <div class="row">
+              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1 img-section-la-carte">
+                <img src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
+              </div>
+              <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
+                <img src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-md-2 offset-xl-1 img-section-la-carte">
-              <img src="img/salle-de-fete-restaurant-jazz.jpg" alt="Image d'une salle de restaurant avec un évènement">
-            </div>
-            <div class="col-10 offset-1 col-sm-6 col-md-4 offset-xl-2 img-section-la-carte">
-              <img src="img/restaurant-table.jpg" alt="Image d'un coin d'un restaurant avec un table">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 container-button-reservation">
-              <button class="button_reservations">
-                Réservations
-              </button>
+            <div class="row">
+              <div class="col-10 offset-1 col-sm-3 col-md-4 offset-md-2 offset-xl-4 container-button-reservation">
+                <button id="reservations" class="button_reservations">
+                  Réservations
+                </button>
+              </div>
             </div>
           </div>
           <div class="row container-carousel-text">
             <div class="col-12 col-sm-12 col-xl-12 carousel-text-blur">
               <marquee>
-                Alors... ça reste entre nous ?
+                Alors... ça reste entre nous ? Alors... ça reste entre nous ?
               </marquee>  
             </div>
             <div class="col-12 col-sm-12 col-xl-12 carousel-text">
               <marquee>
-                Alors... ça reste entre nous ?
+                Alors... ça reste entre nous ? Alors... ça reste entre nous ?
               </marquee>
             </div>
           </div>
